# demo-project

./: LICENSE  README.md
pytests/: .gitignore  conftest.py  pyproject.toml  pytest.ini
pytests/lib/: exceptions.py  settings.py
pytests/lib/connection/: admin_session.py  session.py  websocket.py
pytests/lib/model/user/: user.py  user_status.py  user_type.py
pytests/lib/service/admin/: users.py
pytests/lib/utils/: credentials.py  fixtures.py  page_request.py
pytests/tests/backend/: test_security.py  test_users.py
pytests/tests/utils/: cleanup_type.py  fixtures.py  names.py  settings.py  users.py
som-backend/: pom.xml  skaffold.yaml
som-backend/docker/: docker-compose.yml
som-backend/docker/app/: Dockerfile
som-backend/docker/keycloak/: Dockerfile
som-backend/docker/keycloak/keycloak_configurator/: main.py  pyproject.toml
som-backend/docker/keycloak/keycloak_configurator/lib/: settings.py
som-backend/docker/keycloak/keycloak_configurator/lib/custom_admin/: CKA.py  CKAClients.py  CKARealms.py  CKARoles.py  CKAUsers.py  payloads.py
som-backend/docker/keycloak/keycloak_configurator/lib/utils/: Credentials.py  RealmRepresentation.py
som-backend/docker/postgres/: Dockerfile
som-backend/kustomize/base/: kustomization.yaml  som-core.yaml  som-test-srvc.yaml
som-backend/kustomize/base/keycloak/: keycloak-configmap.yaml  keycloak-deployment.yaml  (+2 more)
som-backend/kustomize/test/: update-replicas.yaml
som-backend/som-commons/: pom.xml
som-backend/som-core/: pom.xml
som-backend/som-test-service/: pom.xml
som-client/: info.txt  pom.xml
(+163 files in other folders)
